fix: resolve compilation errors and code formatting issues
- Fix MaximumClassLinesCondition to handle MalformedURLException properly
- Fix LeaderboardDebugServiceTddTest with explicit generic type casting
- Fix ValidationServiceTeamCompositionTddTest to use Arrays.asList for null values
- Apply spotless formatting across leaderboard and validation services
- All tests now passing (70 tests: 11 leaderboard + 59 validation)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>